--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -46,13 +46,14 @@
   font-size: sans-serif;
 }
 h1{
+  text-align: center;
   color: #fff;
   font-size: 45px;
   line-height:1;
   position: absolute;
   top: 50px;
-  left: 50px;
-  transform: translate(-50%)
+  left: 50%;
+  transform: translate(-50%);
 }
 .container{
   margin:   auto;
