--- a/color-pallet-project/src/App.css
+++ b/color-pallet-project/src/App.css
@@ -2,49 +2,93 @@
   text-align: center;
   width: 100%;
   min-height: 100vh;
-  display: flex;
+  /* display: flex; */
 }
 
 
-*{
-  box-sizing:border-box;
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-size: sans-serif;
-}
-h1{
+} 
+h1 {
   text-align: center;
   color: #fff;
   font-size: 45px;
-  line-height:1;
+  line-height: 1;
   position: absolute;
   top: 50px;
   left: 50%;
   transform: translate(-50%);
 }
-.container{
-  margin:   auto;
+.container {
+  margin: auto;
   width: 100%;
   max-width: 590px;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
 }
 
-.container .card{
+.container .card {
   width: 100%;
-  max-width:100px;
+  max-width: 100px;
   margin: 10px 0;
   text-align: center;
-}
+} 
 .container .card .p {
   margin: 12px 0;
   font-weight: 600;
   cursor: pointer;
-}
-.container .card .box{
+} 
+.container .card .box {
   width: 100%;
   height: 100px;
-  border-radius:12px;
+  border-radius: 12px;
   cursor: pointer;
+} 
+
+.button {
+  padding: 0.75rem;
+  border: none;
+  font: inherit;
+  font-weight: 600;
+  color: white;
+  cursor: pointer;
+  color: var(--primary);
+  background-color: var(--background);
+  border: 2px solid var(--dark-turquoise);
+  transition: background-color 0.2s;
+  line-height: 1;
+}
+.hi{
+  text-align: center;
+  color: #fff;
+}
+label{
+  display: inline-block;
+  padding: 8px;
+  clear: left;
+  width: 250px;
+  text-align: right;
+}
+input {
+display: inline-block;
+text-align: center;
+}
+.meow{
+  text-align: center;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+}
+.hi {
+  border: none;
+  width: 15%;
+  outline: none;
+  color: white;
+  padding: 0.5em;
+  border-radius: 18px;
+  background: #7c7c7c2b;
 }
