--- a/color-pallet-project/src/App.css
+++ b/color-pallet-project/src/App.css
@@ -5,13 +5,12 @@
   /* display: flex; */
 }
 
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-size: sans-serif;
-} 
+}
 h1 {
   text-align: center;
   color: #fff;
@@ -37,18 +36,18 @@ h1 {
   max-width: 100px;
   margin: 10px 0;
   text-align: center;
-} 
+}
 .container .card .p {
   margin: 12px 0;
   font-weight: 600;
   cursor: pointer;
-} 
+}
 .container .card .box {
   width: 100%;
   height: 100px;
   border-radius: 12px;
   cursor: pointer;
-} 
+}
 
 /* .button {
   padding: 0.75rem;
@@ -63,11 +62,11 @@ h1 {
   transition: background-color 0.2s;
   line-height: 1;
 } */
-.hi{
+.hi {
   text-align: center;
   color: #fff;
 }
-label{
+label {
   display: inline-block;
   padding: 8px;
   clear: left;
@@ -75,15 +74,10 @@ label{
   text-align: right;
 }
 input {
-display: inline-block;
-text-align: center;
-}
-.meow{
+  display: inline-block;
   text-align: center;
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
 }
+
 .hi {
   border: none;
   width: 15%;
@@ -92,4 +86,27 @@ text-align: center;
   padding: 0.5em;
   border-radius: 18px;
   background: white;
+}
+.button-12 {
+  padding: 6px 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+  border-radius: 6px;
+  border: none;
+  margin-right: 20px;
+  cursor: pointer;
+
+  background: #6e6d70;
+  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1),
+    inset 0px 0.5px 0.5px rgba(255, 255, 255, 0.5),
+    0px 0px 0px 0.5px rgba(0, 0, 0, 0.12);
+  color: #dfdedf;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-12:focus {
+  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),
+    0px 0.5px 1px rgba(0, 0, 0, 0.1), 0px 0px 0px 3.5px rgba(58, 108, 217, 0.5);
+  outline: 0;
 }
